--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:production": "npm run -s serve",
     "start:development": "npm run -s dev",
     "build": "preact build",
-    "serve": "preact build && preact serve",
+    "serve": "preact build && serve build --single",
     "dev": "preact watch",
     "lint": "eslint src",
     "test": "jest"
@@ -20,21 +20,25 @@
     "build/*"
   ],
   "devDependencies": {
-    "eslint": "^4.9.0",
-    "eslint-config-synacor": "^2.0.2",
+    "eslint": "^6.5.1",
+    "eslint-config-synacor": "^3.0.4",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-preact-pure": "^2.0.0",
     "jest": "^24.9.0",
     "jest-preset-preact": "^1.0.0",
     "per-env": "^1.0.2",
-    "preact-cli": "^3.0.0-rc.4",
-    "preact-render-spy": "^1.2.1"
+    "preact-cli": "^3.0.0-rc.5",
+    "serve": "^11.1.0"
   },
   "dependencies": {
-    "preact": "^8.5.2",
-    "preact-compat": "^3.17.0",
-    "preact-render-to-string": "^4.1.0",
-    "preact-router": "^2.5.7"
+    "preact": "^10.0.0",
+    "preact-render-to-string": "^5.0.6",
+    "preact-router": "^3.0.0"
   },
   "jest": {
-    "preset": "jest-preset-preact"
+    "preset": "jest-preset-preact",
+    "setupFiles": [
+      "<rootDir>/tests/__mocks__/setupTests.js"
+    ]
   }
 }
