--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "preact build && serve build --single",
     "dev": "preact watch",
     "lint": "eslint src",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "eslintConfig": {
     "extends": "eslint-config-synacor"
